# fhe-eva-core

./: .gitignore  Cargo.toml  README.md  build-wasm.yml  filename=package.json  index.html  ntt_ultrafast  qr.html  test_optimized.html
.github/workflows/: build-wasm.yml  build.yml
Pfad: .github/workflows/: build-wasm.yml
edit/main/runtime/: loader.js
edit/main/webgpu/: ntt-gpu.js  ntt.wgsl
fhe-ntt/src/: lib.rs
new/: main?filename=LICENSE
public/: index.html  qr.html
src/: lib.rs  main.rs  math_utils.rs:  modular.rs  ntt.rs  rns.rs  spiel.rs
src/fhe/: bfv.rs  ckks.rs  mod.rs
sro/: lib.rs
wasm/: fhe_eva_core.js  fhe_eva_core_bg.wasm
